llvm/test/MC/EraVM/asm-parser/misc-operands-errors.s
; RUN: not llvm-mc -triple eravm -o - < %s 2>&1 > %t.stdout | FileCheck %s
; RUN: FileCheck --check-prefix=STDOUT %s < %t.stdout

; STDOUT:     .text
; STDOUT-NOT: {{.+}}

; reject integer literals as immediate jump targets
  jump 42
  near_call r1, 42
  near_call r1, @foo, 42
  far_call r1, r2, 42

; reject 2-operand far calls
  far_call             r3, r4
  far_call.static      r3, r4
  far_call.shard       r3, r4
  far_call.st.sh       r3, r4
  far_call.delegate         r3, r4
  far_call.delegate.static  r3, r4
  far_call.delegate.shard   r3, r4
  far_call.delegate.st.sh   r3, r4
  far_call.mimic            r3, r4
  far_call.mimic.static     r3, r4
  far_call.mimic.shard      r3, r4
  far_call.mimic.st.sh      r3, r4

; COM: Autogenerated checks below, see README.md.
; CHECK:       <stdin>:{{[0-9]+}}:8: error: cannot parse operand
; CHECK-NEXT:    jump 42
; CHECK-NEXT:         ^
; CHECK:       <stdin>:{{[0-9]+}}:17: error: cannot parse operand
; CHECK-NEXT:    near_call r1, 42
; CHECK-NEXT:                  ^
; CHECK:       <stdin>:{{[0-9]+}}:23: error: cannot parse operand
; CHECK-NEXT:    near_call r1, @foo, 42
; CHECK-NEXT:                        ^
; CHECK:       <stdin>:{{[0-9]+}}:20: error: cannot parse operand
; CHECK-NEXT:    far_call r1, r2, 42
; CHECK-NEXT:                     ^
; CHECK:       <stdin>:{{[0-9]+}}:3: error: cannot parse instruction
; CHECK-NEXT:    far_call             r3, r4
; CHECK-NEXT:    ^
; CHECK:       <stdin>:{{[0-9]+}}:3: error: cannot parse instruction
; CHECK-NEXT:    far_call.static      r3, r4
; CHECK-NEXT:    ^
; CHECK:       <stdin>:{{[0-9]+}}:3: error: cannot parse instruction
; CHECK-NEXT:    far_call.shard       r3, r4
; CHECK-NEXT:    ^
; CHECK:       <stdin>:{{[0-9]+}}:3: error: cannot parse instruction
; CHECK-NEXT:    far_call.st.sh       r3, r4
; CHECK-NEXT:    ^
; CHECK:       <stdin>:{{[0-9]+}}:3: error: cannot parse instruction
; CHECK-NEXT:    far_call.delegate         r3, r4
; CHECK-NEXT:    ^
; CHECK:       <stdin>:{{[0-9]+}}:3: error: cannot parse instruction
; CHECK-NEXT:    far_call.delegate.static  r3, r4
; CHECK-NEXT:    ^
; CHECK:       <stdin>:{{[0-9]+}}:3: error: cannot parse instruction
; CHECK-NEXT:    far_call.delegate.shard   r3, r4
; CHECK-NEXT:    ^
; CHECK:       <stdin>:{{[0-9]+}}:3: error: cannot parse instruction
; CHECK-NEXT:    far_call.delegate.st.sh   r3, r4
; CHECK-NEXT:    ^
; CHECK:       <stdin>:{{[0-9]+}}:3: error: cannot parse instruction
; CHECK-NEXT:    far_call.mimic            r3, r4
; CHECK-NEXT:    ^
; CHECK:       <stdin>:{{[0-9]+}}:3: error: cannot parse instruction
; CHECK-NEXT:    far_call.mimic.static     r3, r4
; CHECK-NEXT:    ^
; CHECK:       <stdin>:{{[0-9]+}}:3: error: cannot parse instruction
; CHECK-NEXT:    far_call.mimic.shard      r3, r4
; CHECK-NEXT:    ^
; CHECK:       <stdin>:{{[0-9]+}}:3: error: cannot parse instruction
; CHECK-NEXT:    far_call.mimic.st.sh      r3, r4
; CHECK-NEXT:    ^
